--- a/services/src/IdentityServer.STS.Identity/Views/Shared/_Layout.cshtml
+++ b/services/src/IdentityServer.STS.Identity/Views/Shared/_Layout.cshtml
@@ -1,4 +1,4 @@
-﻿@using Domain.Entities.Identity
+﻿@using Doitsu.Technology.Ecommerce.Domain.Entities.Identity
 @using Duende.IdentityServer.Extensions
 @using Microsoft.AspNetCore.Identity
 @using Microsoft.AspNetCore.Mvc.Localization
