--- a/application/customer-site/src/app/pages/portfolio/masonry-grid-four/masonry-grid-four.component.html
+++ b/application/customer-site/src/app/pages/portfolio/masonry-grid-four/masonry-grid-four.component.html
@@ -1,6 +1,6 @@
 <app-breadcrumb [title]="'Portfolio'" [breadcrumb]="'Portfolio'"></app-breadcrumb>
 <!-- section start -->
-<section class="filter-section">
+<!-- <section class="filter-section">
     <div class="container">
         <div class="row">
             <div class="col-12">
@@ -33,5 +33,5 @@
            </div>
         </div>
     </div>
-</section>
+</section> -->
 <!-- Section ends -->
