--- a/application/customer-site/src/app/shop/collection/widgets/price/price.component.html
+++ b/application/customer-site/src/app/shop/collection/widgets/price/price.component.html
@@ -4,13 +4,13 @@
     <div class="collection-collapse-block-content">
         <div class="collection-brand-filter">
             <div class="mt-2">
-                <ng5-slider 
+                <ngx-slider 
                     [(value)]="min" 
                     [(highValue)]="max" 
                     [options]="options" 
                     (userChangeEnd)="appliedFilter($event)"
                     *ngIf="isBrowser">
-                </ng5-slider>
+                </ngx-slider>
             </div>
         </div>
     </div>
