--- a/services/cms-headless/src/DTech.Cms.SiteTheme/Views/Layout.cshtml
+++ b/services/cms-headless/src/DTech.Cms.SiteTheme/Views/Layout.cshtml
@@ -1,18 +1,57 @@
+@using OrchardCore.DisplayManagement
+@using OrchardCore.DisplayManagement.ModelBinding
+@using OrchardCore.Users.Models
+
+@inject IDisplayManager<UserMenu> DisplayManager
+@inject IUpdateModelAccessor UpdateModelAccessor
+
 <!DOCTYPE html>
 <html lang="@Orchard.CultureName()">
 <head>
     <meta charset="utf-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - Orchard Core</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>@RenderTitleSegments(Site.SiteName, "before")</title>
+    <link type="image/x-icon" rel="shortcut icon" href="~/TheTheme/favicon.ico">
+    <script asp-name="bootstrap" version="5" at="Foot"></script>
+    <style asp-name="thetheme-bootstrap-oc" version="1"></style>
+    <style asp-name="font-awesome" version="6"></style>
+    <resources type="Meta"/>
+    <resources type="HeadLink"/>
+    <resources type="Stylesheet"/>
+    <resources type="HeadScript"/>
+    @await RenderSectionAsync("HeadMeta", required: false)
 </head>
-<body>
-<h1>@T["Doitsu Technology Website"]</h1>
+<body dir="@Orchard.CultureDir()">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+    <div class="container">
+        <shape type="Branding"/>
+        <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbar" aria-expanded="false" aria-controls="navbar" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse justify-content-end" id="navbar">
+            <div class="d-flex justify-content-between align-items-center">
+                <menu alias="alias:main-menu" cache-id="main-menu" cache-fixed-duration="00:05:00" cache-tag="alias:main-menu"/>
+                <ul class="navbar-nav user-top-navbar">
+                    @await RenderSectionAsync("NavbarTop", required: false)
+                    @await DisplayAsync(await DisplayManager.BuildDisplayAsync(new UserMenu(), UpdateModelAccessor.ModelUpdater))
+                </ul>
+            </div>
+        </div>
+    </div>
+</nav>
 @await RenderSectionAsync("Header", required: false)
-@await RenderBodyAsync()
-
-<hr/>
-<footer>
-    @await RenderSectionAsync("Footer", required: false)
-</footer>
+<main class="container">
+    @await RenderSectionAsync("Messages", required: false)
+    @await RenderBodyAsync()
+</main>
+@if (IsSectionDefined("Footer"))
+{
+    <footer>
+        <div class="container">
+            @await RenderSectionAsync("Footer", required: false)
+        </div>
+    </footer>
+}
+<resources type="FootScript"/>
 </body>
 </html>
